[gd_scene load_steps=17 format=1]

[ext_resource path="res://res/UI/botton_pannel_flat.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/Menu.gd" type="Script" id=2]
[ext_resource path="res://res/UI/botton_menu/botton_menu_r.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/Botton_menu.gd" type="Script" id=4]
[ext_resource path="res://res/UI/botton_menu/botton_menu_c_b_np.png" type="Texture" id=5]
[ext_resource path="res://res/UI/botton_menu/botton_menu_c_b_p.png" type="Texture" id=6]
[ext_resource path="res://res/UI/option_menu/button_normal.png" type="Texture" id=7]
[ext_resource path="res://res/UI/option_menu/button_pressed.png" type="Texture" id=8]
[ext_resource path="res://res/UI/botton_menu/add.png" type="Texture" id=9]
[ext_resource path="res://res/UI/botton_menu/orders.png" type="Texture" id=10]
[ext_resource path="res://res/UI/botton_menu/stats.png" type="Texture" id=11]
[ext_resource path="res://res/UI/option_menu/option_menu.png" type="Texture" id=12]
[ext_resource path="res://scenes/UI/opition_menu/OptionMenu.gd" type="Script" id=13]
[ext_resource path="res://res/UI/money_icon.png" type="Texture" id=14]
[ext_resource path="res://res/UI/botton_label.png" type="Texture" id=15]
[ext_resource path="res://scenes/DEBUG/regenerate.gd" type="Script" id=16]

[node name="UI" type="CanvasLayer"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="BottonPanel2" type="TextureFrame" parent="."]

anchor/right = 1
rect/min_size = Vector2( 0, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 568.0
margin/right = 0.0
margin/bottom = 600.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = { "_edit_lock_":true }

[node name="PopupMenu" type="PopupMenu" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 20.0
popup/exclusive = false
items = [  ]
script/script = ExtResource( 2 )

[node name="orders" type="PopupMenu" parent="PopupMenu"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 20.0
popup/exclusive = false
items = [  ]

[node name="BottonPanel1" type="PanelContainer" parent="."]

editor/display_folded = true
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 47.0
margin/top = 50.0
margin/right = 1.0
margin/bottom = 4.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="HBoxContainer" type="HBoxContainer" parent="BottonPanel1"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 39.0
margin/bottom = 39.0
custom_constants/separation = 5
alignment = 0

[node name="Bulid_btt" type="Button" parent="BottonPanel1/HBoxContainer"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Botton_menu" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/bottom = 1
rect/min_size = Vector2( 0, 54 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 600.0
margin/right = 411.0
margin/bottom = -54.0
texture = ExtResource( 3 )
patch_margin/left = 14
patch_margin/top = 6
patch_margin/right = 13
script/script = ExtResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="hide_button" type="TextureButton" parent="Botton_menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = -16.0
margin/right = 86.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )

[node name="Buttons" type="HBoxContainer" parent="Botton_menu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="Plan" type="TextureButton" parent="Botton_menu/Buttons"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Botton_menu/Buttons/Plan"]

transform/pos = Vector2( 16, 16 )
texture = ExtResource( 9 )

[node name="Orders" type="TextureButton" parent="Botton_menu/Buttons"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 36.0
margin/top = 0.0
margin/right = 68.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Botton_menu/Buttons/Orders"]

transform/pos = Vector2( 16, 16 )
texture = ExtResource( 10 )

[node name="Stats" type="TextureButton" parent="Botton_menu/Buttons"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 0.0
margin/right = 104.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Botton_menu/Buttons/Stats"]

transform/pos = Vector2( 16, 16 )
texture = ExtResource( 11 )

[node name="Option_menu" type="Patch9Frame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 1.0
margin/right = 233.0
margin/bottom = 329.0
texture = ExtResource( 12 )
patch_margin/left = 4
patch_margin/top = 4
patch_margin/right = 4
patch_margin/bottom = 4
script/script = ExtResource( 13 )
__meta__ = { "_edit_lock_":true }

[node name="money_icon" type="Sprite" parent="."]

transform/pos = Vector2( 146, 588 )
texture = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 38, 568 )
texture = ExtResource( 15 )
region_rect = Rect2( 0, 37, 41, 27 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 584.0
margin/right = 159.0
margin/bottom = 602.0
text = "test"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="REGENERATE" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 686.0
margin/top = 6.0
margin/right = 793.0
margin/bottom = 26.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Make map again"
flat = false
script/script = ExtResource( 16 )

[connection signal="item_pressed" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_item_pressed"]

[connection signal="item_pressed" from="PopupMenu/orders" to="." method="_on_orders_item_pressed"]

[connection signal="pressed" from="Botton_menu/Buttons/Plan" to="Botton_menu" method="_on_Plan_pressed"]

[connection signal="pressed" from="Botton_menu/Buttons/Orders" to="Botton_menu" method="_on_Orders_pressed"]

[connection signal="pressed" from="Botton_menu/Buttons/Stats" to="Botton_menu" method="_on_Stats_pressed"]

[connection signal="pressed" from="REGENERATE" to="REGENERATE" method="_on_REGENERATE_pressed"]


